# insurance_chatbot

./: .env.example  .gitignore  Dockerfile  README.md  example_usage.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: coverage.py  health.py
app/core/: config.py  logger.py
app/exceptions/: custom_exceptions.py
app/schemas/: coverage.py
app/services/: insurance_analyzer.py  pdf_extractor.py
app/utils/: text_processor.py  validators.py
